--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 body {
+	margin 0;
 	background-color: #777 ;
 	text-align: center ;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 18px ;
 	padding-left: 12% ;
-	 line-height: 3;
-	 color: grey ;
+	line-height: 3;
+	color: grey ;
 }
 
 header {
 	background-color: #ebebeb ;
 	height: 60px ;
-	width: 1000px ;
-
+	max-width: 1000px ;
 }
 
 nav {
 	background-color: #ebebeb ;
 	height: 60px ;
-	width: 1000px ;
+	max-width: 1000px ;
 
 }
 
@@ -46,7 +46,7 @@ aside {
 	display: inline-block;
 	height: 250px ;
 	width: 300px ;
-	padding-left: 2% ;
+	padding-left: 7% ;
 	padding-bottom: 2% ;
 	padding-top: 5% ;
 }
@@ -82,9 +82,8 @@ aside {
 
 footer {
 	background-color: #ebebeb ;
-	padding-left: 2% ;
 	padding-bottom: 2% ;
 	padding-top: 2% ;
-	width: 1000px ; 
+	max-width: 1000px ; 
 
 }
